<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context="com.aryankalia.logotest.MainActivity">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        android:onClick="logintoken"
        android:text="@string/LogIn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        app:srcCompat="@drawable/ic_logo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="signuptoken"
        android:text="@string/SignUp" />

</RelativeLayout>
