<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.aryankalia.logotest.american">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="369dp"
        android:contentDescription="@string/LogIn"
        app:srcCompat="@drawable/ic_foodartistic"
        android:onClick="johnnyappleseedtoken"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="377dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:contentDescription="@string/action_settings"
        android:fontFamily="sans-serif-thin"
        android:text="@string/loremipsum"
        android:textColor="@color/textColor"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView4"
        android:onClick="americanmessengertoken"
        android:layout_toRightOf="@+id/imageView4"
        android:contentDescription="@string/food"
        app:srcCompat="@drawable/ic_profilepic" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView13"
        android:layout_toEndOf="@+id/imageView13"
        android:layout_toRightOf="@+id/imageView13"
        android:fontFamily="sans-serif"
        android:text="@string/John"
        android:textColor="@color/colorAccent"
        android:onClick="johnnyappleseedtoken"/>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView12"
        android:layout_toRightOf="@+id/imageView12"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView11"
        android:layout_toRightOf="@+id/imageView11"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView19"
        android:layout_toRightOf="@+id/imageView19"
        android:contentDescription="@string/food"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView15"
        android:layout_toRightOf="@+id/imageView15"
        android:contentDescription="TODO"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_crown" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/imageView14"
        app:srcCompat="@drawable/van" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView13"
        android:layout_marginTop="97dp"
        android:contentDescription="@string/LogIn"
        app:srcCompat="@drawable/pancakes" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:text="@string/loremipsum"
        android:layout_marginBottom="217dp"
        android:textSize="11sp"
        android:textColor="@color/textColor"
        android:fontFamily="sans-serif-thin"
        android:contentDescription="@string/action_settings" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:contentDescription="@string/food"
        app:srcCompat="@drawable/ic_profilepic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:text="@string/Will"
       />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView12"
        android:layout_toRightOf="@+id/imageView12"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView11"
        android:layout_toRightOf="@+id/imageView11"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView10"
        android:layout_toRightOf="@+id/imageView10"
        android:contentDescription="@string/food"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignEnd="@+id/imageView19"
        android:layout_alignRight="@+id/imageView19"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView8"
        android:layout_toRightOf="@+id/imageView8"
        android:contentDescription="TODO"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/ic_crown" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/LogIn"
        app:srcCompat="@drawable/smores" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:text="@string/loremipsum"
        android:layout_marginBottom="57dp"
        android:textSize="11sp"
        android:textColor="@color/textColor"
        android:fontFamily="sans-serif-thin"
        android:contentDescription="@string/action_settings" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="320dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:contentDescription="@string/food"
        app:srcCompat="@drawable/ic_profilepic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:text="@string/Donald"
        />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView12"
        android:layout_toRightOf="@+id/imageView12"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView11"
        android:layout_toRightOf="@+id/imageView11"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView10"
        android:layout_toRightOf="@+id/imageView10"
        android:contentDescription="@string/food"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignEnd="@+id/imageView19"
        android:layout_alignRight="@+id/imageView19"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView8"
        android:layout_toRightOf="@+id/imageView8"
        android:contentDescription="TODO"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView16"
        app:srcCompat="@drawable/van" />

</RelativeLayout>
