<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aryankalia.logotest.cheflisting">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/imageView22"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/imageView22"
        android:layout_toEndOf="@+id/imageView27"
        android:layout_toRightOf="@+id/imageView27"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/imageView22"
        android:layout_toEndOf="@+id/imageView25"
        android:layout_toRightOf="@+id/imageView25"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/imageView22"
        android:layout_toEndOf="@+id/imageView23"
        android:layout_toRightOf="@+id/imageView23"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/imageView22"
        android:layout_toEndOf="@+id/imageView24"
        android:layout_toRightOf="@+id/imageView24"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:onClick="customMessageToken"
        app:srcCompat="@drawable/ic_profilepic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView26"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:fontFamily="sans-serif"
        android:text="@string/John"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:onClick="johnnyappleseedtoken"/>

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/imageView26"
        android:layout_toLeftOf="@+id/imageView29"
        android:layout_toStartOf="@+id/imageView29"
        app:srcCompat="@drawable/van" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView28"
        app:srcCompat="@drawable/ic_crown" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:text="647-123-456"
        android:onClick="johnnyappleseedtoken"/>


    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@+id/imageView27"
        android:layout_toRightOf="@+id/imageView27"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@+id/imageView25"
        android:layout_toRightOf="@+id/imageView25"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@+id/imageView23"
        android:layout_toRightOf="@+id/imageView23"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@+id/imageView24"
        android:layout_toRightOf="@+id/imageView24"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView48"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/ic_profilepic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:fontFamily="sans-serif"
        android:text="@string/Will"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/ic_crown" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="187dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:text="647-123-456" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="280dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="280dp"
        android:layout_toEndOf="@+id/imageView27"
        android:layout_toRightOf="@+id/imageView27"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="280dp"
        android:layout_toEndOf="@+id/imageView25"
        android:layout_toRightOf="@+id/imageView25"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="280dp"
        android:layout_toEndOf="@+id/imageView23"
        android:layout_toRightOf="@+id/imageView23"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="280dp"
        android:layout_toEndOf="@+id/imageView24"
        android:layout_toRightOf="@+id/imageView24"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView48"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="280dp"
        app:srcCompat="@drawable/ic_profilepic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:fontFamily="sans-serif"
        android:text="@string/Donald"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView31"
        app:srcCompat="@drawable/van" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="315dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:text="647-123-456" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="385dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="385dp"
        android:layout_toEndOf="@+id/imageView27"
        android:layout_toRightOf="@+id/imageView27"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="385dp"
        android:layout_toEndOf="@+id/imageView25"
        android:layout_toRightOf="@+id/imageView25"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="385dp"
        android:layout_toEndOf="@+id/imageView23"
        android:layout_toRightOf="@+id/imageView23"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="385dp"
        android:layout_toEndOf="@+id/imageView24"
        android:layout_toRightOf="@+id/imageView24"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView48"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="385dp"
        app:srcCompat="@drawable/ic_profilepic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="395dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:fontFamily="sans-serif"
        android:text="Jimmy Smith"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_toEndOf="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView22"
        android:text="647-123-456" />

</RelativeLayout>
